--- a/TrafficFlowPrediction/src/main/resources/application.properties
+++ b/TrafficFlowPrediction/src/main/resources/application.properties
@@ -1,1 +1,18 @@
 spring.application.name=TrafficFlowPrediction
+spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}?sslmode=verify-full
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Server Configuration
+server.port=${SERVER_PORT}
+
+# Application Configuration
+app.jwt.secret=${APP_SECRET}
+app.jwt.expiration=${JWT_EXPIRATION}
+
+# CORS Configuration
+app.cors.allowed-origins=${CORS_ALLOWED_ORIGINS}
+
+# API Version
+app.api.version=${API_VERSION}
