--- a/TrafficFlowPrediction/src/main/resources/application.properties
+++ b/TrafficFlowPrediction/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Server Configuration
 server.port=${SERVER_PORT}
+server.servlet.context-path=/api
 
 # Application Configuration
 app.jwt.secret=${APP_SECRET}
@@ -16,3 +17,15 @@ app.cors.allowed-origins=${CORS_ALLOWED_ORIGINS}
 
 # API Version
 app.api.version=${API_VERSION}
+
+# JPA Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+# OpenAPI/Swagger Configuration
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.operations-sorter=method
