--- a/TrafficFlowPrediction/src/main/resources/application.properties
+++ b/TrafficFlowPrediction/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 spring.application.name=TrafficFlowPrediction
-spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}?sslmode=verify-full
+spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}?sslmode=require
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
+logging.level.org.springframework.security.web.FilterChainProxy=DEBUG
 
 # Server Configuration
 server.port=${SERVER_PORT}
-server.servlet.context-path=/api
 
 # Application Configuration
 app.jwt.secret=${APP_SECRET}
@@ -22,10 +22,8 @@ app.api.version=${API_VERSION}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 # OpenAPI/Swagger Configuration
 springdoc.api-docs.path=/api-docs
-springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.swagger-ui.enabled=true
 springdoc.swagger-ui.operations-sorter=method
