fixed all the errors

--- a/TrafficFlowPrediction/src/main/resources/application.properties
+++ b/TrafficFlowPrediction/src/main/resources/application.properties
@@ -4,6 +4,10 @@ spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 logging.level.org.springframework.security.web.FilterChainProxy=DEBUG
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.hibernate.ddl-auto=update
+logging.level.org.springframework.data.jpa=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
 
 # Server Configuration
 server.port=${SERVER_PORT}
