--- a/TrafficFlowPrediction/pom.xml
+++ b/TrafficFlowPrediction/pom.xml
@@ -112,6 +112,11 @@
     		<artifactId>spring-dotenv</artifactId>
     		<version>4.0.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.postgis</groupId>
+			<artifactId>postgis-jdbc</artifactId>
+			<version>1.3.3</version>
+		</dependency>
 	</dependencies>
 
 	<build>
